--- a/templates/home.html
+++ b/templates/home.html
@@ -1,1 +1,7 @@
-Tyler Dunster CIS 381 Final!!!
+{% extends "base.html" %}
+{% block content %}
+<div class="jumbotron">
+    <h1>Tyler's Hockey Equipment Reviews</h1>
+    <p>The best place to review hockey equipment</p>
+</div>
+{% endblock %}
