Add Startbootstrap theme

--- a/templates/home.html
+++ b/templates/home.html
@@ -1,7 +1,11 @@
 {% extends "base.html" %}
-{% block content %}
-<div class="jumbotron">
-    <h1>Tyler's Hockey Equipment Reviews</h1>
-    <p>The best place to review hockey equipment</p>
+{% block home %}
+<div class="intro-header">
+  <div class="container">
+    <div class="into-message">
+      <h1>Tyler's Hockey Equipment Reviews</h1>
+      <h3>The best place to review hockey equipment</h3>
+    </div>
+  </div>
 </div>
 {% endblock %}
