Startbootswatch theme edit 1

--- a/templates/home.html
+++ b/templates/home.html
@@ -2,9 +2,9 @@
 {% block home %}
 <div class="intro-header">
   <div class="container">
-    <div class="into-message">
+    <div class="intro-message">
       <h1>Tyler's Hockey Equipment Reviews</h1>
-      <h3>The best place to review hockey equipment</h3>
+      <h3>The Best place to review Hockey Equipment!</h3>
     </div>
   </div>
 </div>
