--- a/static/css/landing-page.css
+++ b/static/css/landing-page.css
@@ -22,7 +22,7 @@ h6 {
 }
 
 .topnav {
-    font-size: 14px;
+    font-size: 18px;
 }
 
 .lead {
@@ -35,14 +35,14 @@ h6 {
     padding-bottom: 50px;
     text-align: center;
     color: #f8f8f8;
-    background: url(../img/intro-bg.jpg) no-repeat center center;
+    background: url(../img/hockey_stick_rack_001.jpg) no-repeat center center;
     background-size: cover;
 }
 
 .intro-message {
     position: relative;
     padding-top: 20%;
-    padding-bottom: 20%;
+    padding-bottom: 17%;
 }
 
 .intro-message > h1 {
@@ -58,12 +58,15 @@ h6 {
 }
 
 .intro-message > h3 {
+    margin-right: 510px;
     text-shadow: 2px 2px 3px rgba(0,0,0,0.6);
+    font-size: 2em;
+
 }
 
 @media(max-width:767px) {
     .intro-message {
-        padding-bottom: 15%;
+        padding-bottom: 20%;
     }
 
     .intro-message > h1 {
