--- a/templates/base.html
+++ b/templates/base.html
@@ -44,12 +44,12 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand topnav" href="/">Equipment Reviews</a>
+                <a class="navbar-brand topnav" href="/">Home</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
-                  <li><a href="#">Home</a></li>
+                  <li><a href="#">Reviews</a></li>
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
@@ -66,8 +66,8 @@
     {% endblock %}
 
     <!-- Header -->
-  
-  
+
+
     <!-- Footer -->
     <footer>
         <div class="container">
