--- a/templates/home.html
+++ b/templates/home.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% block home %}
+{% if user.is_authenticated %}
 <div class="intro-header">
   <div class="container">
     <div class="intro-message">
