--- a/templates/base.html
+++ b/templates/base.html
@@ -50,6 +50,7 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                   {% if user.is_authenticated %}
+                  <li><a href="{% url 'review_create' %}">Add Review</a></li>
                   <li><a href="{% url 'auth_logout' %}">Logout</a></li>
                   {% else %}
                   <li><a href="{% url 'auth_login' %}">Login</a></li>
