Add review update view

--- a/templates/review/review_detail.html
+++ b/templates/review/review_detail.html
@@ -3,4 +3,7 @@
 <h1>{{ review.title }}</h1>
 <p>{{ review.description }}</p>
 <p>Submitted by {{ review.user.username }} on {{review.created_at }}</p>
+{% if review.user == user %}
+<p><a href="{% url 'review_update' pk=review.id %}">Edit Review</a></p>
+{% endif %}
 {% endblock %}
