Add review delete view

--- a/templates/review/review_detail.html
+++ b/templates/review/review_detail.html
@@ -5,5 +5,6 @@
 <p>Submitted by {{ review.user.username }} on {{review.created_at }}</p>
 {% if review.user == user %}
 <p><a href="{% url 'review_update' pk=review.id %}">Edit Review</a></p>
+<p><a href="{% url 'review_delete' pk=review.id %}">Delete Review</a></p>
 {% endif %}
 {% endblock %}
