Add comment create view

--- a/templates/review/review_detail.html
+++ b/templates/review/review_detail.html
@@ -7,4 +7,5 @@
 <p><a href="{% url 'review_update' pk=review.id %}">Edit Review</a></p>
 <p><a href="{% url 'review_delete' pk=review.id %}">Delete Review</a></p>
 {% endif %}
+<p><a href="{% url 'comment_create' pk=review.id %}">Add Comment</a></p>
 {% endblock %}
