Add comments to review detail view

--- a/templates/review/review_detail.html
+++ b/templates/review/review_detail.html
@@ -7,5 +7,14 @@
 <p><a href="{% url 'review_update' pk=review.id %}">Edit Review</a></p>
 <p><a href="{% url 'review_delete' pk=review.id %}">Delete Review</a></p>
 {% endif %}
+{% if comments.count > 0 %}
+<h3>{{ comments.count }} Comment{{ comments.count|pluralize }}:</h3>
+{% endif %}
+{% for comment in comments %}
+<div class="panel">
+  <p>{{ comment.text }}</p>
+  <p>Commented by {{ comment.user.username }} on {{ comment.created_at }}</p>
+</div>
+{% endfor %}
 <p><a href="{% url 'comment_create' pk=review.id %}">Add Comment</a></p>
 {% endblock %}
