--- a/templates/review/review_detail.html
+++ b/templates/review/review_detail.html
@@ -13,6 +13,9 @@
 {% for comment in comments %}
 <div class="panel">
   <p>{{ comment.text }}</p>
+  {% if comment.user == user %}
+  <p><a href="{% url 'comment_update' review_pk=review.id comment_pk=comment.id %}">Edit Comment</a></p>
+  {% endif %}
   <p>Commented by {{ comment.user.username }} on {{ comment.created_at }}</p>
 </div>
 {% endfor %}
