Add comment delete view

--- a/templates/review/review_detail.html
+++ b/templates/review/review_detail.html
@@ -15,6 +15,7 @@
   <p>{{ comment.text }}</p>
   {% if comment.user == user %}
   <p><a href="{% url 'comment_update' review_pk=review.id comment_pk=comment.id %}">Edit Comment</a></p>
+  <p><a href="{% url 'comment_delete' review_pk=review.id comment_pk=comment.id %}">Delete Comment</a></p>
   {% endif %}
   <p>Commented by {{ comment.user.username }} on {{ comment.created_at }}</p>
 </div>
