Add review voting

--- a/templates/review/review_list.html
+++ b/templates/review/review_list.html
@@ -4,6 +4,13 @@
 <div class="panel">
   <h3><a href="{{ review.get_absolute_url }}">{{ review.title }}</a></h3>
   <p>Submitted by {{ review.title.username }} on {{review.created_at }}</p>
+  <p>{{ review.vote_set.all.count }} Vote{{ review.vote_set.all.count|pluralize }}</p>
+  <form method="post" action="{% url 'vote' %}">
+    {% csrf_token %}
+    <input type="hidden" name="review" value="{{ review.id }}" />
+    <input type="hidden" name="user" value="{{ user.id }}" />
+    <button>+</button>
+  </form>
 </div>
 {% endfor %}
 {% endblock %}
