Add comment voting

--- a/templates/review/review_detail.html
+++ b/templates/review/review_detail.html
@@ -18,6 +18,14 @@
   <p><a href="{% url 'comment_delete' review_pk=review.id comment_pk=comment.id %}">Delete Comment</a></p>
   {% endif %}
   <p>Commented by {{ comment.user.username }} on {{ comment.created_at }}</p>
+  <p>{{ comment.vote_set.all.count }} Vote{{ comment.vote_set.all.count|pluralize }}</p>
+  <form method="post" action="{% url 'vote' %}">
+    {% csrf_token %}
+    <input type="hidden" name="comment" value="{{ comment.id }}" />
+    <input type="hidden" name="review" value="{{ review.id }}" />
+    <input type="hidden" name="user" value="{{ user.id }}" />
+    <button>+</button>
+  </form>
 </div>
 {% endfor %}
 <p><a href="{% url 'comment_create' pk=review.id %}">Add Comment</a></p>
