Add User Profile Links

--- a/templates/review/review_detail.html
+++ b/templates/review/review_detail.html
@@ -2,7 +2,7 @@
 {% block content %}
 <h1>{{ review.title }}</h1>
 <p>{{ review.description }}</p>
-<p>Submitted by {{ review.user.username }} on {{review.created_at }}</p>
+<p>Submitted by <a href="{% url 'user_detail' slug=review.user.username %}">{{ review.user.username }}</a> on {{review.created_at }}</p>
 {% if review.user == user %}
 <p><a href="{% url 'review_update' pk=review.id %}">Edit Review</a></p>
 <p><a href="{% url 'review_delete' pk=review.id %}">Delete Review</a></p>
@@ -17,8 +17,7 @@
   <p><a href="{% url 'comment_update' review_pk=review.id comment_pk=comment.id %}">Edit Comment</a></p>
   <p><a href="{% url 'comment_delete' review_pk=review.id comment_pk=comment.id %}">Delete Comment</a></p>
   {% endif %}
-  <p>Commented by {{ comment.user.username }} on {{ comment.created_at }}</p>
-  <p>{{ comment.vote_set.all.count }} Vote{{ comment.vote_set.all.count|pluralize }}</p>
+  <p>Commented by <a href="{% url 'user_detail' slug=comment.user.username %}">{{ comment.user.username }}</a> on {{comment.created_at }} ({{ comment.vote_set.all.count }} Vote{{ comment.vote_set.all.count|pluralize }})</p>
   <form method="post" action="{% url 'vote' %}">
     {% csrf_token %}
     <input type="hidden" name="comment" value="{{ comment.id }}" />
