--- a/templates/review/review_list.html
+++ b/templates/review/review_list.html
@@ -3,7 +3,7 @@
 {% for review in object_list %}
 <div class="panel">
   <h3><a href="{{ review.get_absolute_url }}">{{ review.title }}</a></h3>
-  <p>Submitted by {{ review.title.username }} on {{review.created_at }}</p>
+  <p>Submitted by <a href="{% url 'user_detail' slug=review.user.username %}">{{ review.user.username }}</a> on {{review.created_at }}</p>
   <p>{{ review.vote_set.all.count }} Vote{{ review.vote_set.all.count|pluralize }}</p>
   <form method="post" action="{% url 'vote' %}">
     {% csrf_token %}
