--- a/templates/base.html
+++ b/templates/base.html
@@ -50,6 +50,9 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                   {% if user.is_authenticated %}
+                  <form action ="{% url 'search' %}" class="navbar-form navbar-left" method="get">
+                    <input type="text" placeholder="Search" class="form-control" name="query">
+                  </form>
                   <li><a href="{% url 'review_list' %}">Reviews</a></li>
                   <li><a href="{% url 'review_create' %}">Add Review</a></li>
                   <li><a href="{% url 'user_detail' slug=user.username %}">Profile</a></li>
