--- a/templates/user/user_detail.html
+++ b/templates/user/user_detail.html
@@ -4,6 +4,9 @@
 <p>Email Address:{{ user_in_view.email }}</p>
 <p>First Name:{{ user_in_view.first_name }}</p>
 <p>Last Name:{{ user_in_view.last_name }}</p>
+{% if user_in_view == user %}
+<p><a href="{% url 'user_update' slug=user.username %}">Edit Profile</a></p>
+{% endif %}
 <h3>Reviews ({{ reviews.count }})</h3>
 {% for review in reviews %}
 <p><a href="{{ review.get_absolute_url }}">{{ review.title }}</a></p>
