Add styling to Vote form

--- a/templates/review/review_list.html
+++ b/templates/review/review_list.html
@@ -4,12 +4,21 @@
 <div class="panel">
   <h3><a href="{{ review.get_absolute_url }}">{{ review.title }}</a></h3>
   <p>Submitted by <a href="{% url 'user_detail' slug=review.user.username %}">{{ review.user.username }}</a> on {{review.created_at }}</p>
-  <p>{{ review.vote_set.all.count }} Vote{{ review.vote_set.all.count|pluralize }}</p>
   <form method="post" action="{% url 'vote' %}">
+    <span class="badge">{{ review.comment_set.all.count }} Comment{{ review.comment_set.all.count|pluralize }}</span>
+    <span class="badge">{{ review.vote_set.all.count }} Vote{{ review.vote_set.all.count|pluralize }}</span>
     {% csrf_token %}
     <input type="hidden" name="review" value="{{ review.id }}" />
     <input type="hidden" name="user" value="{{ user.id }}" />
-    <button>+</button>
+      {% if review in user_votes %}
+        <button class="btn btn-link">
+          <span class="glyphicon glyphicon-thumbs-down"></span>
+        </button>
+        {% else %}
+        <button class="btn btn-link">
+          <span class="glyphicon glyphicon-thumbs-up"></span>
+        </button>
+        {% endif %}
   </form>
 </div>
 {% empty %}
