--- a/templates/review/review_detail.html
+++ b/templates/review/review_detail.html
@@ -19,11 +19,20 @@
   {% endif %}
   <p>Commented by <a href="{% url 'user_detail' slug=comment.user.username %}">{{ comment.user.username }}</a> on {{comment.created_at }} ({{ comment.vote_set.all.count }} Vote{{ comment.vote_set.all.count|pluralize }})</p>
   <form method="post" action="{% url 'vote' %}">
+    <span class="badge">{{ commment.vote_set.all.count }} Vote{{  comment.vote_set.all.count|pluralize }}</span>
     {% csrf_token %}
     <input type="hidden" name="comment" value="{{ comment.id }}" />
     <input type="hidden" name="review" value="{{ review.id }}" />
     <input type="hidden" name="user" value="{{ user.id }}" />
-    <button>+</button>
+    {% if comment in user_votes %}
+        <button class="btn btn-link">
+          <span class="glyphicon glyphicon-thumbs-down"></span>
+        </button>
+    {% else %}
+        <button class="btn btn-link">
+          <span class="glyphicon glyphicon-thumbs-up"></span>
+        </button>
+    {% endif %}
   </form>
 </div>
 {% endfor %}
