Add Media Upload

--- a/templates/review/review_detail.html
+++ b/templates/review/review_detail.html
@@ -45,6 +45,7 @@
   ({{ rating.rating__avg }})
 {% endif %}
 <p>{{ review.description }}</p>
+<p>{% if review.image_file %}<img src="{{ review.image_file.url }}" />{% endif %}</p>
 <p>Submitted by <a href="{% url 'user_detail' slug=review.user.username %}">{{ review.user.username }}</a> on {{review.created_at }}</p>
 {% if review.user == user %}
 <p><a href="{% url 'review_update' pk=review.id %}">Edit Review</a></p>
