Update home page picture

--- a/static/css/landing-page.css
+++ b/static/css/landing-page.css
@@ -32,10 +32,10 @@ h6 {
 
 .intro-header {
     padding-top: 50px; /* If you're making other pages, make sure there is 50px of padding to make sure the navbar doesn't overlap content! */
-    padding-bottom: 50px;
+    padding-bottom: 90px;
     text-align: center;
     color: #f8f8f8;
-    background: url(../img/hockey_stick_rack_001.jpg) no-repeat center center;
+    background: url(../img/home_page_001.png) no-repeat center center;
     background-size: cover;
 }
 
